# opengrep

./: .dockerignore  .gitignore  .gitmodules  .ocamlformat  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  SECURITY.md  dune  dune-project  flake.nix  install.sh  metrics.md  release_changes.md  semgrep.opam  setup.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: .codemapignore  Makefile  README.md  build-manylinux-binary-x86.yml  build-manylinux-binary.yml  build-musllinux-binary-x86.yml  build-musllinux-binary.yml  build-osx-binary-arm64.yml  build-osx-binary.yml  build-test-core-aarch64.yml  build-test-core-x86.jsonnet  build-test-core-x86.yml  build-test-docker.jsonnet  build-test-docker.yml  build-test-docker.yml.disabled  build-test-manylinux-aarch64.jsonnet  build-test-manylinux-aarch64.yml  build-test-manylinux-x86.jsonnet  build-test-manylinux-x86.yml  build-test-manylinux-x86.yml.disabled  build-test-manylinux.yml  build-test-osx-arm64.jsonnet  build-test-osx-arm64.yml  build-test-osx-arm64.yml.disabled  build-test-osx-x86.jsonnet  build-test-osx-x86.yml  build-test-osx-x86.yml.disabled  build-test-osx.yml  build-test-windows-x86.jsonnet  build-test-windows-x86.yml  build-test-windows-x86.yml.disabled  build-windows-binary-x86.yml  nightly.yml.disabled  push-docker.jsonnet  push-docker.yml.disabled  release-homebrew.jsonnet  release-homebrew.yml.disabled  release.jsonnet  release.yml  release.yml.disabled  (+10 more)
TCB/: Cap.ml  Cap.mli  CapUnix.ml  CapUnix.mli  TCB.ml  forbid_exec.jsonnet
changelog.d/: CODE-7838.fixed  CODE-7871.fixed  code-7654.added  code-7657.fixed  code-7677.added  code-7715.fixed  code-7750.added  code-7758.fixed  code-7781.added  code-7800.added  code-7870.added  csharp-new.added  flow-83.fixed  flow-86.added  flow-87.fixed  gh-10508.fixed  gh-10723.fixed  gh-2554.added  incid-110.fixed  match-perf.changed  nosem-mem.changed  python.changed  saf-1598.fixed  saf-1667.fixed  saf-1681.fixed  saf-1686.fixed  saf-1687.fixed  saf-1693.fixed  saf-1703.fixed  saf-1721.fixed  saf-1722.fixed  saf-1724.fixed  saf-1743.fixed  saf-1755.fixed  saf-tracing.fixed  sc-1964.added  sc-2006.changed  semgrepignore-anchored-dirs.fixed  ssc-1903.changed  ssc-1942.added
cli/: Makefile  Pipfile  pyproject.toml  setup.py
cli/spec/: opengrep.spec
cli/tests/: conftest.py  fixtures.py  semgrep_runner.py
dev/: optional.opam  required.opam
interfaces/: Input_to_core.atd
languages/regexp/: Lexer.mll  Unit_parsing.ml
libs/ast_generic/: AST_generic.ml  AST_generic_helpers.ml  AST_generic_helpers.mli  Enclosure.ml  Enclosure.mli  IdFlags.ml  IdFlags.mli
libs/commons/: ATD_string_wrap.ml  CapExec.ml  CapExec.mli  Common.ml  Common.mli  Eq.ml  File_type.ml  Filename_.ml  Filename_.mli  Fpath_.ml  Gensym.ml  Gensym.mli  Hashtbl_.ml  Hashtbl_.mli  List_.ml  List_.mli  Logs_.ml  Logs_.mli  Pcre2_.ml  Pcre2_.mli  Platform.ml  Platform.mli  UCmd.ml  UCmd.mli  UCommon.ml  UCommon.mli  UFile.ml  UFile.mli  UTmp.ml  UTmp.mli  Uri_.ml  Uri_.mli  dune
libs/commons2/: common2.ml  common2.mli  dune
libs/git_wrapper/: Git_wrapper.ml  Git_wrapper.mli  Unit_git_wrapper.ml
libs/gitignore/: Gitignore.ml  Gitignore_cache.ml  Gitignore_cache.mli  Gitignore_filter.ml  dune  (+3 more)
opam/: aliengrep.opam  ast_generic.opam  commons.opam  git_wrapper.opam  lib_parsing.opam  parallelism.opam  parser_lisp.opam  process_limits.opam  profiling.opam  semgrep.opam  semgrep.opam.template  spacegrep.opam  tracing.opam
perf/: Makefile  constants.py  run-benchmarks
scripts/: build-nuitka.sh  build-wheels.sh  check-bash-version  compare-target-selection  compare.py  cp_win_artifacts.sh  fix_rpath_windows.sh  generate_cheatsheet.py  install-memprof-limits-dev.sh  osx-setup-for-release.sh  run-benchmarks.sh  run-core-test  validate-docker-build.sh  validate-docker-release.sh  validate-wheel.sh  workflow-build-inside-alpine-container.sh
src/il/: CFG.ml  Display_IL.ml  Display_IL.mli  IL.ml  IL_helpers.ml  IL_helpers.mli  dune
src/main/: Main.ml  dune  flags.sh
src/matching/: Apply_equivalences.ml  Generic_vs_generic.ml  Match_patterns.ml  Match_patterns.mli  Matching_generic.ml  Matching_generic.mli  SubAST_generic.ml  Unit_matcher.ml  dune
src/osemgrep/cli_ci/: Ci_CLI.ml  Ci_CLI.mli  Ci_subcommand.ml  Ci_subcommand.mli  Git_metadata.ml  Github_metadata.ml  Test_ci_subcommand.ml  Test_ci_subcommand.mli  Test_is_blocking_helpers.ml  Unit_ci.ml  dune
src/osemgrep/language_server/requests/: Initialize_request.ml  Request_handler.ml  dune
src/sca/: Lockfile.ml  Lockfile.mli  Lockfile_kind.ml  Lockfile_kind.mli  Manifest.ml  Manifest.mli  Manifest_kind.ml  Manifest_kind.mli  SCA_dependency.ml  SCA_dependency_source.ml  SCA_dependency_source.mli  SCA_ecosystem.ml  SCA_transitivity.ml  dune
(+1047 files in other folders)
