; Library defining an Intermediate Language (IL) to ease certain
; static analysis.
;
; Try to not add too many dependencies in this directory. This library
; is still used in projects outside semgrep (e.g., codemap/efuns) which rely
; on small dependencies.

(library
 (public_name semgrep.il)
 (name semgrep_core_il)
 (wrapped false)
 (libraries
   commons
   ograph ; TODO: should use ocamlgraph instead!
   lib_parsing
   ast_generic
 )
 (preprocess
   (pps
      ppx_deriving.show
      ppx_deriving.eq
      ppx_deriving.ord
      ppx_hash
      visitors.ppx
   )
 )
)
