(library
 (public_name semgrep.matching)
 (name semgrep_matching)
 (wrapped false)
 (libraries
   yaml ppx_deriving.runtime re
   thread-local-storage
   kcas_data

   commons
   lib_parsing
   pfff-lang_GENERIC-analyze
   pfff_lang_GENERIC_naming
   parser_javascript.ast ; for Ast_js.default_entity

   semgrep_core
   semgrep_typing
   semgrep_optimizing
   semgrep_parsing_languages ; used in tests only
 )
 (preprocess (pps ppx_deriving.show ppx_profiling))
; restore once can compile semgrep with working ppxlib and
; bisect_ppx together
; (instrumentation (backend bisect_ppx))
)
