; OCaml implementation of the 'semgrep ci' subcommand.
;
(library
  (public_name semgrep.osemgrep_cli_ci)
  (name osemgrep_cli_ci)
  (wrapped false)
  (libraries
    cmdliner
    commons
    emile
    osemgrep_configuring
    osemgrep_core
    osemgrep_networking
    osemgrep_cli_scan ; reusing the same flags and most of the code
    osemgrep_distributed_scan_stub
    osemgrep_cli_login ; for test helpers
  )
 (preprocess
   (pps
     ppx_profiling
     ppx_deriving.show
     ppx_deriving.eq
     ppx_hash
     lwt_ppx
   )
 )
)
