(library
 (public_name semgrep.language_server.requests)
 (name osemgrep_language_server_requests)
 (wrapped false)
 (libraries
   semgrep.language_server.scan_helpers
   semgrep.language_server.custom_requests
   semgrep.language_server.custom_commands)
  (preprocess
   (pps
     ppx_deriving_yojson
     lwt_ppx)))
